Changelog
=========

0.1.4 (unreleased)
------------------

- Added german translation.
  [jone]


0.1.3 (2011/05/16)
------------------

- Added dutsch translation (thanks to Kim Paulissen)
  [glenfant]

- z3c.autoinclude awareness
  [glenfant]

- Remove portal id from confirmation screen
  [gotcha]

0.1.2 (2008/12/15)
------------------

- Back to folder_contents whatever action taken
  [glenfant]

0.1.1 (2008/10/02)
------------------

- Plone 3.0.x compatible

0.1.0 (2008/10/01)
------------------

- Initial release